# zeqra

./: README.md
.devcontainer/: devcontainer.json  post-create-command.sh  post-start-command.sh
zeqra/: .env  Cargo.toml  Dioxus.toml  build.rs
zeqra/assets/: main.css
zeqra/src/: env.rs  main.rs
